// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MemberExpression/> should render 1`] = `
<div
  class="wrapper IdentifierDropdown test"
>
  <div
    class="btn-group"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="select ControlStructureButton dropdown-toggle btn btn-secondary"
      type="button"
    >
      <span
        class="label"
      >
        message source from address
      </span>
    </button>
    <div
      aria-hidden="true"
      class="dropdown options dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Message
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Ticket
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Customer
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Shopify Last Order
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Shopify Customer
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Magento2 Last Order
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Magento2 Customer
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Recharge Last Subscription
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Recharge Customer
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
      <button
        class="option dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span
          class="optionContent"
        >
          <span
            class="categoryLabel"
          >
            Smile Customer
          </span>
          <i
            class="optionArrow material-icons"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<MemberExpression/> should update the dropdown on clicking a category 1`] = `
<div
  class="wrapper IdentifierDropdown test"
>
  <div
    class="btn-group"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="select ControlStructureButton dropdown-toggle btn btn-secondary"
      type="button"
    >
      <span
        class="label"
      >
        message source from address
      </span>
    </button>
    <div
      aria-hidden="true"
      class="dropdown isCategorySelected options dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <div
        class="backOption"
      >
        <span
          class="optionContent"
        >
          <i
            class="backArrow material-icons mr-1"
          >
            arrow_back
          </i>
          Shopify Last Order
        </span>
      </div>
      <div
        class="subOptions"
      >
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Created date
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Financial status
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Fulfillment status
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Tags
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Total price
        </button>
        <div
          class="subcategoryLabel"
        >
          Last Fulfillment
        </div>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Created date
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Shipment status
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Status
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Tracking number
        </button>
        <div
          class="subcategoryLabel"
        >
          Shipping Address
        </div>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Country
        </button>
        <button
          class="option subOption dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Province
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MemberExpression/> should update the rule on clicking a variable option 1`] = `
Array [
  Array [
    Immutable.List [
      "body",
      0,
      "test",
      "arguments",
      0,
    ],
    Immutable.Map {
      "computed": false,
      "object": Immutable.Map {
        "computed": false,
        "object": Immutable.Map {
          "computed": false,
          "object": Immutable.Map {
            "computed": false,
            "object": Immutable.Map {
              "computed": false,
              "object": Immutable.Map {
                "name": "ticket",
                "type": "Identifier",
              },
              "property": Immutable.Map {
                "name": "customer",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            "property": Immutable.Map {
              "name": "integrations",
              "type": "Identifier",
            },
            "type": "MemberExpression",
          },
          "property": Immutable.Map {
            "name": "shopify",
            "type": "Identifier",
          },
          "type": "MemberExpression",
        },
        "property": Immutable.Map {
          "name": "last_order",
          "type": "Identifier",
        },
        "type": "MemberExpression",
      },
      "property": Immutable.Map {
        "name": "fulfillment_status",
        "type": "Identifier",
      },
      "type": "MemberExpression",
    },
    "UPDATE",
  ],
]
`;
